network-policy/blocking-b-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-to-b 
spec:
  podSelector:
    matchLabels:
      app: tester-b 
  policyTypes:
    - Ingress
